--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,15 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+
+a {
+  color: black;
+  text-decoration: none;
+}
+  
+
+
+a:hover {
+  color: #54c7f1;
+}
+  
